--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,6 +11,9 @@
 
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
+    <!-- sweetalert2 script -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10.16.6/dist/sweetalert2.min.js"></script>
+    <!-- fontawesome script -->
+    <script src="https://kit.fontawesome.com/e3e5f279fe.js" crossorigin="anonymous"></script>
   </body>
 </html>
